--- a/components_task/src/styles.css
+++ b/components_task/src/styles.css
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    color: rgb(82, 118, 239);
+    font-size: 1.5rem;
+    font-family: Arial, sans-serif;
+    background-color: #e5e5f3;
+    margin: 0;
+    padding: 0;
+    width: 50%;
+    margin: 20px auto;
+    
+ 
+    border: 2px solid #ddd;
+    
+    
+    box-shadow: 0 4px 10px rgba(59, 48, 48, 0.1);
+    
+
+    border-radius: 8px;
+    
+    padding: 20px;
+}
+
