--- a/components_task/src/app/app.html
+++ b/components_task/src/app/app.html
@@ -1,4 +1,5 @@
-<h1>{{text}}</h1>
-<app-personal-details></app-personal-details>
-<app-history></app-history>
-<app-notes></app-notes>
+<app-header></app-header>
+<main class="container">
+  <router-outlet></router-outlet>
+</main>
+<app-footer></app-footer>
